2008-08-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* gst-libs/gst/riff/riff-read.c:
	  Bump requirement to latest core and use new tag for riff formats.
	  Needed for #520694.

2008-08-01  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/dynamic/Makefile.am:
	* tests/examples/dynamic/codec-select.c: (make_encoder),
	(make_pipeline), (do_switch), (my_bus_callback), (main):
	Add example app that dynamically switches between 3 'encoders'.

2008-07-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaysink.c: (gst_play_sink_set_vis_plugin):
	Add some more comments.

2008-07-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/videotestsrc/gstvideotestsrc.c: (gst_video_test_src_getcaps),
	(gst_video_test_src_create):
	Discard buffers of the wrong size after renegotiation, this is perfectly
	possible with things like capsfilter that could suggest caps changes
	upstream without knowing the size of the buffer.

2008-07-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/icles/.cvsignore:
	* tests/icles/Makefile.am:
	* tests/icles/test-scale.c: (make_pipeline), (main):
	Add dynamic rescaling tests for the new basetransform.

2008-07-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/audioconvert/Makefile.am:
	  Dist recently-added gstfastrandom.h.

2008-07-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support):
	Fix a "may be used uninitialized in this function" which weirdly only
	appears on macosx (?).

2008-07-30  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/riff/riff-ids.h:
	  Adding acid chunk for tempo and loop information.

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* sys/xvimage/Makefile.am:
	  floor() needs linking to $(LIBM).

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* ext/gnomevfs/gstgnomevfssrc.c:
	  Aggregate short reads and add some comments and debug logging.
	  Fixes #537380
